refactor: adequado o pom.xml que permite o mockito acessar e alterar classes internas (como o DataSource) para fazer os mocks adequadamente.